# gridfm-datakit

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  COMMITTERS.csv  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  README.md  SUPPORT.md  coveragerc  index.html  juliapkg.json  mkdocs.yml  objects.inv  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  test_shift_angle.ipynb  todo.md
.github/workflows/: ci-build.yaml  release.yaml  scorecard.yml  test.yml
.github/workflows /: ci-build.yaml
GridDataGen/: __init__.py  cli.py  generate.py  interactive.py  network.py  save.py
GridDataGen/config/: param_handler.py
GridDataGen/io/: stats.py
GridDataGen/load_profiles/: ercot_load_act_hr_2024_coast.csv  ercot_load_act_hr_2024_east.csv  ercot_load_act_hr_2024_far_west.csv  ercot_load_act_hr_2024_north.csv  ercot_load_act_hr_2024_north_central.csv  ercot_load_act_hr_2024_south_central.csv  ercot_load_act_hr_2024_southern.csv  ercot_load_act_hr_2024_total.csv  ercot_load_act_hr_2024_west.csv
GridDataGen/network/: process_network.py  solvers.py
GridDataGen/perturbations/: load.py  load_perturbation.py  topology_perturbation.py
GridDataGen/process/: process_network.py
GridDataGen/utils/: io.py  load.py  param_handler.py  process_network.py  solvers.py  stats.py  topology_perturbation.py  utils.py
components/admittance_perturbation/: index.html
components/cli/: index.html
components/generate/: index.html
components/generator_perturbation/: index.html
components/load/: index.html
components/network/: index.html
components/param_handler/: index.html
components/power_balance/: index.html
components/process_network/: index.html
components/save/: index.html
components/solvers/: index.html
components/stats/: index.html
components/topology/: index.html
components/utils/: index.html
components/validation/: index.html
docs/: index.md  installation.md
docs/components/: admittance_perturbation.md  cli.md  generate.md  generator_perturbation.md  load.md  network.md  param_handler.md  power_balance.md  process_network.md  save.md  solvers.md  stats.md  topology.md  utils.md  validation.md
docs/manual/: admittance_perturbations.md  (+6 more)
gridfm_datakit/: __init__.py  cli.py  generate.py  interactive.py  juliapkg.json  network.py  save.py  validation.py
installation/: index.html
notebooks/: compute_current.ipynb  congingency_demo.ipynb  contingency_demo.ipynb  generate_data_powergraph.ipynb  merge_data.ipynb  pandapower_guide.ipynb  post_processing.ipynb  post_processing_compare.ipynb  post_processing_contingency_dc.ipynb  test_contingency.ipynb  test_data.ipynb
opf_data/: README.md  batch_convert.py
pfdelta/: README.md  batch_convert_pfdelta.py  batch_convert_pfdelta_matpower.py  build_task_splits_from_data_processed.py
scripts/: compare_parquet_files.py  comparison_case24.ipynb  comparison_dash.ipynb  comparison_dash_tamara.ipynb  comparison_gridfm_opfdata.ipynb  comparison_gridfm_opfdata_pglearn.ipynb  convert_to_partitioned_parquet.py  debug.py  dist_generate_pf_data.py  extract_roundtrip_fixtures.py  generate_contingency_data.py  generate_data.ipynb  generate_pf_contingency_hurricane.py  generate_pf_data.py  interactive_interface.ipynb  opfdata_pglearndata.ipynb  parse_ipopt_logs.py  pglearn.ipynb  plot_comparisonv2.ipynb  summary_data_gen.py  test_contingency.ipynb  user_config.yaml  user_config_test.yaml
search/: search_index.json
standup/: 0429.md  0502.md  0505.md  0506.md  0507.md  0509.md  branch_current.md  implementation_overview.md
tests/: conftest.py  test_admittance_perturbation.py  test_all_perturbations.py  test_cli_setup_pm.py  test_compare_pf_opf_results.py  test_compare_pf_opf_results_all_pglib.py  test_data_generation_consistency.py  test_data_validation.py  test_dc_fast.ipynb  test_distributed_generation.py  test_generate.py  test_generator_perturbation.py  test_load_perturbation.py  test_network.py  test_parquet_to_powermodels.py  test_pm_data_path.py  test_random_seed.py  test_save.py  test_solve.py  test_solver_output.py  test_topology_perturbation.py  test_verify_network.py  test_yaml_configs.py
(+262 files in other folders)
