[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridfm_datakit*"]

[project]
name = "gridfm_datakit"
description = "Data Generation Kit"
readme = "README.md"
license = "Apache-2.0"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ipykernel",
    "matplotlib",
    "matpowercaseframes",
    "nbformat",
    "numba",
    "numpy",
    "pandapower==2.14.11",
    "pandas",
    "pathlib",
    "plotly",
    "pyaml",
    "requests",
    "urllib3<2.0.0",
    "ipywidgets",
]

authors = [
  {name = "Alban Puech", email = "Alban.Puech1@ibm.com"},
  {name = "Matteo Mazzonelli", email = "Matteo.Mazzonelli1@ibm.com"},
  {name = "Jonas Weiss", email= "jwe@zurich.ibm.com"},
]

maintainers = [
  {name = "Alban Puech", email = "Alban.Puech1@ibm.com"},
]

[project.scripts]
gridfm_datakit = "gridfm_datakit.cli:main"

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pre-commit",
  "bandit"
]

test = [
  "pytest",
  "pytest-cov"
]
