[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gridfm_datakit*"]

[project]
name = "gridfm-datakit"
description = "Data Generation Kit"
readme = "README.md"
license = "Apache-2.0"
version = "1.0.5rc2"
requires-python = ">=3.10,<3.13"

dependencies = [
    "ipykernel",
    "matplotlib",
    "matpowercaseframes",
    "nbformat",
    "numba",
    "numpy",
    "pandas",
    "pathlib",
    "plotly",
    "pyaml",
    "requests",
    "urllib3>=2.6.0", # fix security issue
    "ipywidgets",
    "ipyfilechooser",
    "scipy",
    # Pinned: juliacall 0.9.35 caps Julia at <=1.11, which conflicts with the
    # Julia 1.12 used here. 0.9.34 supports Julia 1.12.
    "juliacall==0.9.34",
    "networkx",
    "tqdm",
    "pyarrow",
]

authors = [
  {name = "Alban Puech", email = "alban.puech2@ibm.com"},
  {name = "Matteo Mazzonelli", email = "matteo.mazzonelli1@ibm.com"},
  {name = "Tamara Govindasamy", email= "tamara.govindasamy@ibm.com"},
  {name = "Mangaliso Mngomezulu", email= "mngomezulum@ibm.com"},
  {name = "Etienne Vos", email= "etienne.vos@ibm.com"},
  {name = "Jonas Weiss", email= "jwe@zurich.ibm.com"},
]

maintainers = [
  {name = "Alban Puech", email = "apuech@seas.harvard.edu"},
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]

[project.scripts]
gridfm_datakit = "gridfm_datakit.cli:main"

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pre-commit",
  "bandit",
  "build"
]

test = [
  "pytest",
  "pytest-cov",
  "pyinstrument",
  "pytest-xdist"
]

powsybl = [
  "pypowsybl"
]
